--- a/public/client_login/index.html
+++ b/public/client_login/index.html
@@ -2,7 +2,7 @@
 
   <head>
     <title>Login - Chatterino</title>
-    <script src="https://chatterino.com/js/jquery-3.5.1.min.js"></script>
+    <script src="https://chatterino.com/client_login/jquery-3.5.1.min.js"></script>
     <style>
       #credentials {
         display: none;
